fix: Update grid, section

--- a/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element.twig
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element.twig
@@ -98,7 +98,8 @@ Template
 <label{{ attributes }}>
   <div>
   {% if label_display in ['before', 'invisible'] %}
-    {% if floating_label == true %}
+    {% if floating_label %}
+
     <div{{ floating_attributes }}>
         {{ children }}
       <div{{ floating_label__wrapper_attributes }}>
