--- a/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.twig
@@ -54,6 +54,6 @@
     reverse: reverse,
     flip_mobile: true,
     vertical_center: true,
-  }, '2_column' ) }}
+  }, 'column_2' ) }}
 </section>
 
