--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu-footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu-footer.twig
@@ -40,5 +40,5 @@
 {% endfor %}
 
 <nav aria-label="footer">
-  {{ pattern('grid', {cells:cells}, cells|length ~ '_column' ) }}
+  {{ pattern('grid', {cells:cells}, 'column_' ~ cells|length ) }}
 </nav>
