--- a/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element-floating.css
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element-floating.css
@@ -5,7 +5,7 @@
     background-color: transparent;
     &:focus {
       box-shadow: none; @apply outline-0 ring-0;
-      + .floating__label .floating__label{
+      + .floating__label .floating__label {
         &__left { @apply border-2 border-r-0 border-yellow-500; }
         &__center { @apply border-b-2 border-yellow-500; }
         &__right { @apply border-2 border-l-0 border-yellow-500; }
@@ -20,7 +20,7 @@
         span{ @apply opacity-0; }
       }
       &:not(:placeholder-shown) + .floating__label  .floating__label__center {
-        border-top-width: 0px;
+        border-top-width: 0;
         span{@apply block opacity-100 -translate-y-1/2; }
       }
     }
