fix: Update vanilla tailwind starter kit.

--- a/starter-kits/vanilla-tailwind/source/default/patterns/01-atoms/logo/logo.twig
+++ b/starter-kits/vanilla-tailwind/source/default/patterns/01-atoms/logo/logo.twig
@@ -8,6 +8,6 @@
 #}
 
 {# TEMPLATE #}
-<a class="pr-8 block" href="{{ path('<front>') }}">
+<a class="pr-8 block bg-black" href="{{ path('<front>') }}">
   <img src="{{ file_url('ws-assets://images/logo.svg') }}" alt="Brand Logo" class="w-full max-w-7xl">
 </a>
