--- a/starter-kits/tailwind/source/default/patterns/01-atoms/rich-text/rich-text.css
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/rich-text/rich-text.css
@@ -1,59 +1,42 @@
 .prose {
   /* Font */
   @apply [&>*:first-child]:mt-0 [&>*:last-child]:mb-0;
+  @apply lg:text-lg text-black dark:text-white;
 
-  h1 {
+  h1, h2, h3, h4, h5, h6 {
     @apply font-display;
-    @apply font-bold;
-    @apply text-black dark:text-white;
-    @apply text-4xl lg:text-6xl;
+    @apply font-bold text-black dark:text-white;
     @apply tracking-normal lg:tracking-[0.01em];
+  }
+  h1 {
+    @apply text-4xl lg:text-6xl;
     @apply mb-8;
   }
   h2 {
-    @apply font-display;
-    @apply font-bold;
-    @apply text-black dark:text-white;
     @apply text-3xl lg:text-5xl;
-    @apply tracking-normal lg:tracking-[0.01em];
-    @apply mb-6 lg:mb-10 mt-8 lg:mt-12;
+    @apply mb-8;
   }
   h3 {
-    @apply font-display;
-    @apply font-bold;
-    @apply text-black;
     @apply text-2xl lg:text-4xl;
-    @apply tracking-normal lg:tracking-[0.01em];
     @apply mb-5 lg:mb-8 mt-6 lg:mt-10;
   }
   h4 {
-    @apply font-display;
-    @apply font-bold;
-    @apply text-black;
     @apply text-xl lg:text-3xl;
-    @apply tracking-normal;
     @apply mb-5 lg:mb-6 mt-5 lg:mt-8;
   }
   h5 {
-    @apply font-display;
     @apply font-bold;
-    @apply text-black;
     @apply text-xl lg:text-2xl;
-    @apply tracking-normal;
     @apply mb-5 lg:mb-5 mt-5 lg:mt-6;
   }
+
   a {
-    @apply font-copy;
     @apply font-bold;
     @apply text-purple-600;
-    @apply text-base lg:text-lg;
     @apply hover:no-underline;
   }
+
   p {
-    @apply font-copy;
-    @apply font-normal;
-    @apply text-black;
-    @apply text-base lg:text-lg;
     @apply mb-5 lg:mb-5 mt-5 lg:mt-5;
   }
   p:first-child {
@@ -61,7 +44,7 @@
   }
 
   .display1 {
-    @apply text-base lg:text-xl text-teal-300;
+    @apply lg:text-xl text-teal-300;
   }
 
   /*  blockquote */
@@ -78,12 +61,12 @@
       @apply text-2xl;
       @apply text-center;
       @apply !font-bold;
-      @apply font-display;
       @apply italic;
       @apply bg-no-repeat bg-center bg-top;
       @apply pt-10 lg:pt-11;
     }
   }
+
   /*  Image */
   img {
     @apply rounded-lg;
@@ -139,9 +122,3 @@
     @apply font-copy;
   }
 }
-
-/* optional variant
-.prose.article {
-
-}
-*/
