--- a/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.twig
@@ -9,13 +9,14 @@
 
 {# Defaults #}
 {% set width = width|default('default') %}
-
+{% set bg_image %}{{- bg_image -}}{% endset %}
 {#
   Padding x defaults:
   The container x padding is allways "default" for all widhts.
   Only width "full" removes the padding_x completly.
 #}
 {% set padding_x = width != 'full' ? padding_x|default('default') : '' %}
+{% set attributes = attributes|default(create_attribute()) %}
 
 {#
   Padding top/bottom defaults:
@@ -23,13 +24,13 @@
   If a background color is adjusted a "default" padding to top is adjusted.
   The user can allways overwrite the this behavior.
 #}
-{% set padding_top = padding_top|default('auto') == 'auto' and bg is not empty ? 'default' : padding_top %}
+{% set padding_top = padding_top|default('auto') == 'auto' and (bg_color or bg_image) ? 'default' : padding_top %}
 {% set padding_bottom = padding_bottom|default('auto') == 'auto' ? 'default' : padding_bottom %}
 
 {# Settings #}
 {% set bg_classes = ([
   'relative',
-  pattern_configuration('container', '', 'bg')[bg]
+  pattern_configuration('tokens_colors', '', 'bg_color')[bg_color]
 ] | sort | join(' ') | trim )%}
 
 {% set classes = ([
@@ -42,18 +43,17 @@
   'mx-auto w-full'
 ] | sort | join(' ') | trim )%}
 
-{% set attributes = attributes|default(create_attribute()) %}
 
 {# TEMPLATE #}
-{% if bg or bg_image or is_relative%}
+{% if bg_color or bg_image %}
 <div {{ create_attribute().addClass(bg_classes) }}>
   {{ bg_image }}
-  {% endif %}
+{% endif %}
   <div {{ attributes.addClass(classes) }}>
     {% block content %}
       {{ content }}
     {% endblock %}
   </div>
-  {% if bg or bg_image or is_relative%}
+{% if bg or bg_image%}
 </div>
 {% endif %}
