--- a/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
@@ -1,31 +1,34 @@
-<footer>
-  {% embed "@organisms/container/container.twig" with {
-    bg: 'purple-dark',
-    padding_top: 'small',
-    padding_bottom: 'small',
-    footer_menu: footer_menu
-  } only %}
-    {% block content %}
-      <div class="flex gap-10 lg:gap-28 flex-col-reverse lg:flex-row ">
-        <div class="grid w-full max-w-[181px]">
-          {{ pattern('logo') }}
-          <div class="mt-3 dark:text-white">
-            {{ "Lorem ipsum dolor sit amet consectetur. Mollis elit enim auctor."|t }}
-          </div>
-          <ul class="mt-[26px] flex items-center gap-5 dark:text-purple-300">
-            <li>
-              <a href="#">{{ pattern('icon', {icon: 'youtube', scale: '1.25', padding: 'roomy' }, 'spritemap' ) }}</a>
-            </li>
-            <li>
-              <a href="#">{{ pattern('icon', {icon: 'instagram', scale: '1.25', padding: 'roomy' }, 'spritemap' ) }}</a>
-            </li>
-            <li>
-              <a href="#">{{ pattern('icon', {icon: 'facebook', scale: '1.25', padding: 'roomy' }, 'spritemap' ) }}</a>
-            </li>
-          </ul>
-        </div>
-        <div>{{ footer_menu }}</div>
+{% set footer_content %}
+  <div class="flex gap-10 lg:gap-28 flex-col-reverse lg:flex-row ">
+    <div class="grid w-full max-w-[181px]">
+      {{ pattern('logo') }}
+      <div class="mt-3 dark:text-white">
+        {{ "Lorem ipsum dolor sit amet consectetur. Mollis elit enim auctor."|t }}
       </div>
-    {% endblock %}
-  {% endembed %}
+      <ul class="mt-[26px] flex items-center gap-5 dark:text-purple-300">
+        <li>
+          <a href="#">{{ pattern('icon', {icon: 'youtube', scale: '1.25', padding: 'roomy' }, 'spritemap' ) }}</a>
+        </li>
+        <li>
+          <a href="#">{{ pattern('icon', {icon: 'instagram', scale: '1.25', padding: 'roomy' }, 'spritemap' ) }}</a>
+        </li>
+        <li>
+          <a href="#">{{ pattern('icon', {icon: 'facebook', scale: '1.25', padding: 'roomy' }, 'spritemap' ) }}</a>
+        </li>
+      </ul>
+    </div>
+    <div>{{ footer_menu }}</div>
+  </div>
+{% endset %}
+
+<footer>
+  {{
+    pattern('container', {
+      bg_color: 'purple-dark',
+      padding_top: 'small',
+      padding_bottom: 'small',
+      content: footer_content
+    })
+  }}
+
 </footer>
