chore: Add new configs to storybook app generation

--- a/packages/cli/src/generators/app/templates/storybook/preview-head.html.ejs
+++ b/packages/cli/src/generators/app/templates/storybook/preview-head.html.ejs
@@ -1,6 +1,4 @@
-<style>
-  body {
-    font-size: 16px;
-  }
-
-</style>
+<script>
+  window.Drupal = {};
+  window.Drupal.behaviors = {};
+</script>
