--- a/packages/cli/src/generators/app/templates/storybook/main.js.ejs
+++ b/packages/cli/src/generators/app/templates/storybook/main.js.ejs
@@ -1,24 +1,48 @@
-const wingsuitCore = require('@wingsuit-designsystem/core');
+const appName = '<%= appName %>';
+const appConfig = resolveConfig(appName);
 const postCss = require('postcss');
 
-module.exports = {
+export default {
+  framework: {
+    name: '@storybook/react-webpack5',
+    options: {
+      builder: {
+        /** This don't work */
+        lazyCompilation: false,
+        fsCache: false,
+      },
+    },
+  },
+  typescript: { reactDocgen: false },
+  docs: {
+    autodocs: 'tag',
+    defaultName: 'Docs',
+  },
+  stories: [
+    './patterns/**/*.mdx',
+    '../../source/default/patterns/**/*.stories.wingsuit.jsx',
+    '../../source/default/patterns/**/*.stories.jsx',
+    './patterns/**/*.stories.wingsuit.jsx',
+    './patterns/**/*.stories.jsx',
+    ...stories(appConfig),
+  ],
   addons: [
-    '@storybook/addon-docs',
-    '@storybook/addon-controls',
-    '@storybook/addon-viewport',
     '@storybook/addon-links',
-    'storybook-addon-themes',
-    '@storybook/addon-postcss',
+    '@storybook/addon-essentials',
     {
-      name: '@storybook/addon-postcss',
+      name: '@storybook/addon-styling',
       options: {
-        postcssLoaderOptions: {
+        postCss: {
           implementation: postCss,
         },
       },
     },
+    'storybook-addon-theme-provider',
+    {
+      name: '@wingsuit-designsystem/storybook',
+      options: {
+        appName: appName,
+      },
+    },
   ],
-  webpackFinal: (config) => {
-    return wingsuitCore.getAppPack(wingsuitCore.resolveConfig('<%= appName %>'), [config]);
-  },
 };
