fix: Use default as rich snippet

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
@@ -45,7 +45,7 @@ Attributes
         headline_tag: 'h3',
         text: text,
         action: action
-      }, 'small' ) }}
+      }, 'default' ) }}
     </div>
   </{{ element }}>
 </div>
