--- a/presets/icon-spritemap/patterns/spritemap.twig
+++ b/presets/icon-spritemap/patterns/spritemap.twig
@@ -1,14 +1,14 @@
 {# SETTINGS #}
 {% set scale = scale|default(1) %}
-{% set padding = pattern_configuration('icon', 'spritemap', 'padding')[padding|default('square')] %}
+{% set margin = padding|default(1) * scale %}
 {% set fill_color = fill_color|default('fill-current') %}
 
 {% set wrapper_classes = ([
     'aspect-[1/1]',
-  padding != '' ? 'flex items-center ' ~ padding,
+    padding != '' ? 'flex items-center ' ~ padding,
 ] | sort | join(' ') | trim) %}
-  {%
- set classes = ([
+
+{% set classes = ([
   'svg w-full h-full',
   fill_color,
   color,
@@ -16,13 +16,9 @@
 
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
 
-{% if presentation == '1' %}
-  {% set attributes = attributes.setAttribute('role', 'presentation') %}
-{% endif %}
-
 {# TEMPLATE #}
-<div class="{{ wrapper_classes }}" style="height: {{ scale }}rem">
-  <svg {{ attributes }}>
-      <use xlink:href="{{ file_url('ws-assets://images/spritemap.svg') }}#{{ icon }}"></use>
-  </svg>
+<div class="{{ wrapper_classes }}" style="height: {{ scale }}rem; margin: {{ margin }}rem; ">
+    <svg {{ attributes }}>
+        <use xlink:href="{{ file_url('ws-assets://images/spritemap.svg') }}#{{ icon }}"></use>
+    </svg>
 </div>
