--- a/starter-kits/tailwind/source/default/patterns/02-molecules/accordion-item/accordion-item.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/accordion-item/accordion-item.twig
@@ -27,11 +27,11 @@
 #}
 <div {{ attributes }} x-data="{selected: false}">
   <div type="button" {{ inner_wrapper_attributes }}
-       @click="selected !== true ? selected = true : selected = false">
+       @click="selected == !selected">
     <div {{ label_wrapper_attributes }}>
       <span {{ label_attributes }}">{{ label }}</span>
       <div class="text-purple-600" x-cloak {{ icon_attributes }} :class="{ 'transform rotate-180 transition duration-400' : selected == true }">
-        {{ pattern('icon', {icon: 'chevron-down' }, 'spritemap' ) }}
+        {{ pattern('icon', {icon: 'chevron-down', scale: '1.25' }, 'spritemap' ) }}
       </div>
     </div>
   </div>
