--- a/starter-kits/tailwind/source/default/tokens/tokens.css
+++ b/starter-kits/tailwind/source/default/tokens/tokens.css
@@ -11,3 +11,7 @@
 .x-clock {
   display: none;
 }
+
+.box-shadow {
+  box-shadow: 0px 4px 6px -2px rgba(0, 0, 0, 0.05), 0px 10px 15px -3px rgba(0, 0, 0, 0.10);
+}
