--- a/starter-kits/tailwind/source/default/tokens/tokens.css
+++ b/starter-kits/tailwind/source/default/tokens/tokens.css
@@ -15,3 +15,8 @@
 .box-shadow {
   box-shadow: 0px 4px 6px -2px rgba(0, 0, 0, 0.05), 0px 10px 15px -3px rgba(0, 0, 0, 0.10);
 }
+
+[type="checkbox"][tabindex="0"]:focus,
+[type="radio"][tabindex="0"]:focus {
+  @apply outline-yellow-500 ring-0 border border-transparent outline outline-offset-[1px];
+}
