fix (#55): Textfields Paddings, Font und Label.

--- a/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element.twig
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element.twig
@@ -59,6 +59,7 @@
 {% set description_attributes = create_attribute().addClass ([
   pattern_configuration('form_element', variant, 'classes')['description'],
   description_display == 'invisible' ? 'visually-hidden',
+  description_display == 'before' ? 'font-bold font-display text-sm'
 ])%}
 
 
