--- a/starter-kits/tailwind/source/default/patterns/01-atoms/rich-text/rich-text.css
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/rich-text/rich-text.css
@@ -10,24 +10,24 @@
   }
   h1 {
     @apply text-4xl lg:text-6xl;
-    @apply mb-8;
+    @apply mb-12;
   }
   h2 {
     @apply text-3xl lg:text-5xl;
-    @apply mb-8;
+    @apply mb-5 lg:mb-8 mt-8 lg:mt-12;
   }
   h3 {
     @apply text-2xl lg:text-4xl;
-    @apply mb-5 lg:mb-8 mt-6 lg:mt-10;
+    @apply mb-5 lg:mb-8 mt-8 lg:mt-10;
   }
   h4 {
     @apply text-xl lg:text-3xl;
-    @apply mb-5 lg:mb-6 mt-5 lg:mt-8;
+    @apply mb-5 lg:mb-8 mt-8 lg:mt-8;
   }
   h5 {
     @apply font-bold;
     @apply text-xl lg:text-2xl;
-    @apply mb-5 lg:mb-5 mt-5 lg:mt-6;
+    @apply mb-5 lg:mb-6 mt-5 lg:mt-8;
   }
 
   a {
@@ -58,9 +58,13 @@
     p {
       background-image: url('data:image/svg+xml;utf8,<svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.5 8.875V7.5625C13.1406 5.82812 12.25 3.8125 11.9219 1.65625C11.8281 1.04688 11.0312 0.765625 10.6562 1.28125C9.625 2.45312 8.875 3.8125 8.35938 5.35938C9.95312 7.14062 12.1094 8.35938 14.5 8.875ZM19.75 4C17.6406 4 16 5.6875 16 7.79688V10.5625C11.125 10.2812 6.95312 7.28125 5.07812 2.96875C4.79688 2.40625 3.95312 2.35938 3.71875 2.92188C2.92188 4.5625 2.5 6.4375 2.5 8.35938C2.5 11.6875 4.09375 14.7812 6.48438 17.0781C7.09375 17.6875 7.70312 18.1562 8.3125 18.625L1.5625 20.3125C1.04688 20.4062 0.8125 21.0156 1.09375 21.4375C1.9375 22.7031 3.95312 24.8594 8.26562 25C8.64062 25.0469 9.01562 24.9062 9.29688 24.6719L12.3906 22L16 22.0469C20.125 22.0469 23.5 18.6719 23.5 14.5469V7L24.9531 4H19.75ZM19.75 8.54688C19.3281 8.54688 18.9531 8.17188 18.9531 7.79688C18.9531 7.375 19.3281 7.04688 19.75 7.04688C20.125 7.04688 20.4531 7.375 20.4531 7.79688C20.5 8.17188 20.125 8.54688 19.75 8.54688Z" fill="%239333EA"/></svg>');
       background-size: 24px;
+      margin: 16px 0!important;
+      font-weight: 500!important;
+      font-family: DM sans!important;
+      line-height: 1.15!important;
       @apply text-2xl;
       @apply text-center;
-      @apply !font-bold;
+      @apply !font-bold font-display;
       @apply italic;
       @apply bg-no-repeat bg-center bg-top;
       @apply pt-10 lg:pt-11;
