--- a/starter-kits/tailwind/source/default/patterns/02-molecules/table/table.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/table/table.twig
@@ -8,7 +8,7 @@
 
 #}
 {% set classes = ([
-  "h-1"
+  "invisible",
 ] | sort | join(' ') | trim )%}
 
 <table class="table-list flex-1 flex md:table w-full text-gray-900">
@@ -27,7 +27,7 @@
       <tr class="grid flex-1 md:table-row even:bg-gray-50 odd:bg-white">
         <td class="{{ classes }}"></td>
         {% for cell in row.cells %}
-          <td class="font-sans text-center md:text-left border-b px-6 py-4 text-gray-500 text-sm font-normal">
+          <td class="font-sans text-center md:text-left px-6 py-4 text-gray-500 text-sm font-normal td-first">
             {{ cell }}
           </td>
         {% endfor %}
