fix (#60): Card anpassen.

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
@@ -42,11 +42,10 @@ Attributes
       {{ pattern('rich_snippet', {
         preheadline: preheadline,
         headline: headline,
-        headline_tag: 'h4',
         text: text,
         action: action,
         attributes: attributes
-      }, 'default' ) }}
+      }, 'small' ) }}
     </div>
   </{{ element }}>
 </div>
