fix (#66): Table Component New Design.

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/table/table.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/table/table.twig
@@ -8,7 +8,7 @@
 
 #}
 {% set classes = ([
-  "h-1",
+  "invisible",
 ] | sort | join(' ') | trim )%}
 
 <table class="table-list flex-1 flex md:table w-full text-gray-900">
