fix (#60): Card anpassen shadow.

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
@@ -29,7 +29,7 @@ Attributes
 {#
   Template
 #}
-<div class="flex flex-1 flex-col group hover:box-shadow">
+<div class="flex flex-1 flex-col group hover:box-shadow shadow-sm">
   <{{ element }} {{ attributes }}>
     {% if image is not empty %}
       <div {{ image_attributes }}>
