--- a/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
@@ -2,7 +2,7 @@
   <div class="flex gap-10 lg:gap-28 flex-col-reverse lg:flex-row py-10 lg:py-16 px-[15px] lg:px-0">
     <div class="grid w-full max-w-[181px]">
       {{ pattern('logo') }}
-      <div class="mt-3 dark:text-white">
+      <div class="mt-3 dark:text-purple-300">
         {{ "Lorem ipsum dolor sit amet consectetur. Mollis elit enim auctor."|t }}
       </div>
       <ul class="mt-3 lg:mt-6 flex items-center gap-5 dark:text-purple-300">
