fix #56-#57: Checkboxes anpassen and Radiobuttons anpassen

--- a/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.twig
@@ -75,6 +75,7 @@
   header: header,
   region_attributes: region_attributes,
   display_header_region: display_header_region,
-  bg_image: bg_image
+  bg_image: bg_image,
+  bg_color: bg_color
 }) }}
 
