--- a/starter-kits/tailwind/source/default/patterns/00-forms/label/form-label.twig
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/label/form-label.twig
@@ -22,6 +22,7 @@ Attributes
 #}
 
 {% set attributes = attributes.addClass([
+  'font-display',
   title_display == 'after' ? 'option',
   title_display == 'before' ? 'font-bold font-display',
   title_display == 'invisible' ? 'visually-hidden',
