--- a/starter-kits/tailwind/apps/drupal/templates/form/form-element-label.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/form-element-label.html.twig
@@ -12,4 +12,4 @@
  * @see template_preprocess_form_element_label()
  */
 #}
-{{ pattern('form_label', {title: title, title_display: title_display, required: required, attributes:attributes  } ) }}
+{{ pattern('form_label', {title: title, title_display: title_display, required: required, attributes:attributes  }, {variant: type} ) }}
