--- a/starter-kits/tailwind/apps/drupal/templates/form/form-element-label--radio.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/form-element-label--radio.html.twig
@@ -28,8 +28,7 @@ Attributes
   title_display == 'invisible' ? 'visually-hidden',
   required ? 'js-form-required',
   required ? 'form-required',
-  variant == 'checkbox' or
-  variant == 'radio' ? 'text-base font-normal': 'font-bold text-sm',
+  'text-base font-normal'
 ]) %}
 {#
 Template
